data/derived/fa15/progs/unify/prog2078.ml.out
Characters 96-102:
  in wwhile ((fx b), f);;
             ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
